tests/fixtures/negatives-and-edges/syntax-error/modified.ts
// Intentional syntax error (still should not crash analyzer)
export function broken( {
  return 1337;
}

